--- a/style.css
+++ b/style.css
@@ -42,7 +42,6 @@ a {
     color: #FFFFFF;
     font-weight: 500;
     font-size: 16px;
-    line-height: 24px;
     width: 120px;
     height: 25px;
 }
@@ -64,3 +63,35 @@ a {
     width: 556.01px;
     height: 438px;
 }
+
+/* media query */
+
+/* mobile devices */
+
+@media only screen and (max-width: 688px) {
+    .banner-secion {
+        padding: 60px 0 30px;
+    }
+
+    .banner-left {
+        margin-right: 30px;
+    }
+
+    .banner-left h1 {
+        width: 285px;
+        height: 130px;
+        font-weight: bold;
+        font-size: 34px;
+        line-height: 60px;
+    }
+
+    .banner-right img {
+        width: 220px;
+        height: 230px;
+    }
+
+}
+
+/* tab devices */
+
+@media only screen and (min-width: 688) and (max-width: 992px) {}
