--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ a {
 
 @media only screen and (max-width: 688px) {
     .banner-secion {
+        width: 100%;
         padding: 60px 0 30px;
     }
 
