--- a/style.css
+++ b/style.css
@@ -106,6 +106,32 @@ a {
 
 /* players profile end */
 
+/* footer start */
+
+.footer-section {
+    display: flex;
+    justify-content: center;
+}
+
+.footer-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.footer-top img {
+    width: 483.87px;
+    height: 110px;
+}
+
+.footer-bottom p {
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 24px;
+    text-transform: capitalize;
+    color: black;
+}
+
 
 /* media query */
 
