--- a/style.css
+++ b/style.css
@@ -156,7 +156,6 @@ a {
 
 @media only screen and (max-width: 688px) {
     .banner-secion {
-        width: 100%;
         padding: 60px 0 30px;
     }
 
@@ -177,6 +176,13 @@ a {
         height: 230px;
     }
 
+    .players-section {
+        display: none;
+    }
+
+    .footer-section {
+        display: none;
+    }
 }
 
 /* tab devices */
