--- a/style.css
+++ b/style.css
@@ -164,7 +164,7 @@ a {
     }
 
     .banner-left h1 {
-        width: 285px;
+        width: 70%;
         height: 130px;
         font-weight: bold;
         font-size: 34px;
@@ -172,7 +172,7 @@ a {
     }
 
     .banner-right img {
-        width: 220px;
+        width: 60%;
         height: 230px;
     }
 
