--- a/style.css
+++ b/style.css
@@ -156,6 +156,7 @@ a {
 
 @media only screen and (max-width: 688px) {
     .banner-secion {
+        display: block;
         padding: 60px 0 30px;
     }
 
