--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ a {
     font-weight: bold;
     font-size: 64px;
     line-height: 80px;
+    margin-bottom: 27px;
 }
 
 .banner-left a {
@@ -157,24 +158,32 @@ a {
 @media only screen and (max-width: 688px) {
     .banner-secion {
         display: block;
-        padding: 60px 0 30px;
+        padding: 80px 0 30px;
     }
 
     .banner-left {
-        margin-right: 30px;
+        margin-bottom: 50px;
     }
 
     .banner-left h1 {
-        width: 70%;
-        height: 130px;
+        width: 50%;
+        height: 138px;
         font-weight: bold;
-        font-size: 34px;
-        line-height: 60px;
+        font-size: 36px;
+        line-height: 50px;
+        padding-left: 16px;
+        padding-right: 66px;
+        margin-bottom: 30px;
     }
+
+    .banner-left a {
+        margin-left: 19px;
+    }
+
+
 
     .banner-right img {
         width: 60%;
-        height: 230px;
     }
 
     .players-section {
