--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ a {
 @media only screen and (max-width: 688px) {
     .banner-secion {
         display: block;
-        padding: 80px 0 30px;
+        padding: 80px 0 60px;
     }
 
     .banner-left {
@@ -179,10 +179,10 @@ a {
         margin-left: 19px;
     }
 
-
-
     .banner-right img {
-        width: 60%;
+        width: 96%;
+        height: 259px;
+        padding: 0 15px;
     }
 
     .players-section {
