--- a/style.css
+++ b/style.css
@@ -87,14 +87,20 @@ a {
     height: 474px;
     background: #fff;
     box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
-    padding: 15px;
+    padding: 15px 15px 33px 15px;
+}
+
+.player img {
+    width: 100%;
+    height: 256px;
+    padding-bottom: 16px;
 }
 
 .player h3 {
-    margin: 10px 0;
     font-weight: bold;
     font-size: 28px;
     line-height: 40px;
+    margin: 0 0 10px 0;
 }
 
 .player p {
@@ -150,6 +156,7 @@ a {
     margin-bottom: 63px;
 }
 
+/* footer end */
 
 /* media query */
 
@@ -187,6 +194,11 @@ a {
 
     .players {
         grid-template-columns: repeat(1, 1fr);
+        grid-row-gap: 24px;
+    }
+
+    .player img {
+        width: 100%;
     }
 
     .footer-section {
