grid row gap added for plyers in mobile

--- a/style.css
+++ b/style.css
@@ -194,7 +194,7 @@ a {
 
     .players {
         grid-template-columns: repeat(1, 1fr);
-        grid-gap: 0 24px;
+        grid-row-gap: 24px;
     }
 
     .player img {
