--- a/style.css
+++ b/style.css
@@ -193,17 +193,13 @@ a {
     }
 
     .players {
-        grid-template-columns: repeat(1, 1fr);
-        grid-row-gap: 24px;
+        width: 90%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
-    .player img {
-        width: 80%;
-    }
-
-    .player img {
-        width: 100%;
-    }
+    .player {}
 
     .footer-section {
         display: none;
