--- a/style.css
+++ b/style.css
@@ -119,6 +119,44 @@ a {
 
 /* players profile end */
 
+/* feature start */
+
+.latest-news {
+    width: 40%;
+}
+
+.news {
+    width: 100%;
+    display: flex;
+    padding: 5px;
+    height: 120px;
+}
+
+.news-image {
+    width: 40%;
+}
+
+.news-image img {
+    width: 100%;
+    height: 50px;
+}
+
+.news-details {
+    margin-left: 10px;
+}
+
+.news-details h4 {
+    margin: 0 0 10px;
+}
+
+.news-details p {
+    margin: 0;
+    font-size: 14px;
+
+}
+
+/* feature end */
+
 /* footer start */
 
 .footer-section {
