--- a/style.css
+++ b/style.css
@@ -122,8 +122,10 @@ a {
 /* feature start */
 
 .feature-section {
+    width: 100%;
     display: flex;
     justify-content: center;
+    padding: 20px 0 80px 0;
 }
 
 .latest-news {
@@ -161,6 +163,10 @@ a {
 }
 
 .feature-videos {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 40%;
     margin-left: 50px;
 }
 
