--- a/style.css
+++ b/style.css
@@ -165,7 +165,7 @@ a {
 .feature-videos {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-end;
     width: 40%;
     margin-left: 50px;
 }
@@ -176,17 +176,20 @@ a {
 
 /* feature end */
 
-/* point-table start */
+/* table-n-schedule start */
+
+.table-schedule-bg {
+    padding-bottom: 80px;
+}
 
 .table-schedule-part {
-    width: 80%;
+    width: 100%;
     display: flex;
     justify-content: center;
 }
 
 .table-section {
-    width: 30%;
-    padding: 5px;
+    width: 20%;
 }
 
 table {
@@ -202,7 +205,7 @@ td {
 
 .schedule-section {
     display: flex;
-    width: 70%;
+    width: 60%;
 }
 
 .schedule {
@@ -230,7 +233,7 @@ td {
 
 
 
-/* point-table end */
+/* table-n-schedule end */
 
 /* footer start */
 
