--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ a {
     width: 100%;
     display: flex;
     padding: 5px;
-    height: 120px;
+    height: 150px;
 }
 
 .news-image {
@@ -326,6 +326,16 @@ td {
         display: flex;
         flex-direction: column;
         align-items: center;
+    }
+
+    .feature-section {
+        flex-direction: column;
+        align-items: center;
+        padding: 0 0 80px 0;
+    }
+
+    .latest-news {
+        margin-bottom: 25px;
     }
 
     .footer-top {
