--- a/style.css
+++ b/style.css
@@ -123,18 +123,15 @@ a {
 
 .feature-section {
     width: 100%;
-    display: flex;
-    justify-content: center;
     padding: 20px 0 80px 0;
 }
 
 .latest-news {
-    width: 40%;
+    width: 80%;
 }
 
 .news {
     width: 100%;
-    display: flex;
     padding: 5px;
     height: 150px;
 }
@@ -336,6 +333,11 @@ td {
 
     .latest-news {
         margin-bottom: 25px;
+    }
+
+    .table-schedule-part {
+        flex-direction: column;
+        align-items: center;
     }
 
     .footer-top {
