--- a/style.css
+++ b/style.css
@@ -119,61 +119,21 @@ a {
 
 /* players profile end */
 
-/* feature start */
+/* news start */
 
-.feature-section {
+.news-section {
     width: 100%;
-    padding: 20px 0 80px 0;
-}
-
-.latest-news {
-    width: 80%;
-}
-
-.news {
     display: flex;
     justify-content: center;
-    width: 100%;
-    padding: 5px;
-    height: 400px;
 }
 
-.news-image {
-    width: 40%;
-}
-
-.news-image img {
-    width: 50%;
-    height: 200px;
-}
-
-.news-details {
-    margin-left: 10px;
-}
-
-.news-details h4 {
-    margin: 0 0 10px;
-}
-
-.news-details p {
-    margin: 0;
-    font-size: 14px;
-
-}
-
-.feature-videos {
+.news-content {
+    width: 80%;
     display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    width: 40%;
-    margin-left: 50px;
+    justify-content: center;
 }
 
-.video {
-    margin-bottom: 20px;
-}
-
-/* feature end */
+/* news end */
 
 /* table-n-schedule start */
 
