--- a/style.css
+++ b/style.css
@@ -287,14 +287,16 @@ td {
         align-items: center;
     }
 
-    .feature-section {
-        flex-direction: column;
-        align-items: center;
-        padding: 0 0 80px 0;
+    .news-section {
+        width: 100%;
+        display: flex;
+        justify-content: center;
     }
 
-    .latest-news {
-        margin-bottom: 25px;
+    .news-content {
+        width: 80%;
+        display: flex;
+        justify-content: center;
     }
 
     .table-schedule-part {
@@ -379,6 +381,18 @@ td {
     .players {
         grid-template-columns: repeat(2, 1fr);
         grid-gap: 30px 27px;
+    }
+
+    .news-section {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+
+    .news-content {
+        width: 80%;
+        display: flex;
+        justify-content: center;
     }
 
 }
