--- a/style.css
+++ b/style.css
@@ -135,64 +135,21 @@ a {
 
 /* news end */
 
-/* table-n-schedule start */
+/* schedule start */
 
-.table-schedule-bg {
-    padding-bottom: 80px;
-}
-
-.table-schedule-part {
+.schedule-section {
     width: 100%;
     display: flex;
     justify-content: center;
 }
 
-.table-section {
-    width: 20%;
-}
-
-table {
-    border-collapse: collapse;
-    width: 90%;
-    height: 200px;
-}
-
-table th,
-td {
-    border: 1px solid grey;
-}
-
-.schedule-section {
+.schedule-content {
+    width: 80%;
     display: flex;
-    width: 60%;
+    justify-content: space-between;
 }
 
-.schedule {
-    width: 33.33%;
-    position: relative;
-}
-
-.schedule:hover .schedule-details {
-    display: block;
-}
-
-.schedule-img img {
-    width: 100%;
-    height: 200px;
-}
-
-.schedule-details {
-    color: white;
-    position: absolute;
-    top: 0;
-    left: 20px;
-    display: none;
-    background-color: rgba(128, 128, 128, 0.486);
-}
-
-
-
-/* table-n-schedule end */
+/* schedule end */
 
 /* footer start */
 
@@ -287,22 +244,16 @@ td {
         align-items: center;
     }
 
-    /* .news-section {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    } */
-
     .news-content {
         flex-direction: column;
         align-items: center;
     }
 
-    .table-schedule-part {
+    .schedule-content {
         flex-direction: column;
         align-items: center;
     }
+
 
     .footer-top {
         display: flex;
@@ -384,8 +335,13 @@ td {
     }
 
     .news-content {
-        flex-direction: column;
-        align-items: center;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .schedule-content {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
     }
 
 }
