banner button solved

--- a/style.css
+++ b/style.css
@@ -45,16 +45,12 @@ a {
     color: #FFFFFF;
     font-weight: 500;
     font-size: 16px;
-    width: 120px;
-    height: 25px;
 }
 
 .banner-left a:hover {
     border-radius: 10px;
     font-size: 30px;
-    width: 200px;
-    height: 40px;
-    transition: width 1s ease-in-out, height 1s ease-in-out, font-size 1s ease-in-out, border-radius 1s ease-in-out;
+    transition: font-size 1s ease-in-out, border-radius 1s ease-in-out;
 }
 
 .banner-arrow {
@@ -320,10 +316,6 @@ a {
         font-size: 64px;
         line-height: 65px;
         margin-bottom: 60px;
-    }
-
-    .banner-left a {
-        width: 30%;
     }
 
     .banner-arrow {
