--- a/style.css
+++ b/style.css
@@ -198,9 +198,9 @@ a {
 /* mobile devices */
 
 @media only screen and (max-width: 688px) {
-    .banner-secion {
-        width: 100%;
-        display: block;
+    .banner-section {
+        flex-direction: column;
+        align-items: center;
         padding: 80px 0 60px;
     }
 
