--- a/style.css
+++ b/style.css
@@ -15,48 +15,39 @@ a {
 
 /* banner start */
 
-.banner-section {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    padding: 109px 0 86px;
+.banner-bg {
     background-color: #2D25A0;
 }
 
+.banner-section {
+    display: flex;
+    justify-content: center;
+    padding: 100px 0 80px 0;
+}
+
 .banner-left {
-    padding: 10px;
     width: 40%;
-    margin-right: 102px;
 }
 
 .banner-left h1 {
-    width: 485px;
-    height: 230px;
-    color: #FFFFFF;
-    font-weight: bold;
+    color: white;
     font-size: 64px;
+    font-weight: 700;
     line-height: 80px;
-    margin-bottom: 27px;
+    letter-spacing: 0px;
+    padding-right: 10px;
 }
 
 .banner-left a {
-    display: inline-block;
     padding: 10px 24px;
     background: #E02C6D;
-    color: #FFFFFF;
-    font-weight: 500;
-    font-size: 16px;
+    color: white;
 }
 
 .banner-left a:hover {
-    border-radius: 10px;
-    font-size: 30px;
-    transition: font-size 1s ease-in-out, border-radius 1s ease-in-out;
-}
-
-.banner-arrow {
-    width: 24px;
-    height: 24px;
+    padding: 15px 40px;
+    font-size: 24px;
+    transition: padding 0.5s ease, font-size .5s ease;
 }
 
 .banner-right {
@@ -64,54 +55,36 @@ a {
 }
 
 .banner-right img {
-    width: 80%;
-    height: 438px;
+    width: 100%;
 }
 
 /* banner end */
 
 /* players profile start */
 
+
+
 .players-section {
     display: flex;
     justify-content: center;
-    padding: 70px 0;
-    background-color: #fff;
+    padding: 70px 0 80px 0;
 }
 
 .players {
+    width: 70%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-gap: 30px 27px;
+    grid-gap: 27px 30px;
 }
 
 .player {
-    width: 330px;
-    height: 474px;
     background: #fff;
     box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
-    padding: 15px 15px 33px 15px;
+    padding: 15px;
 }
 
 .player img {
     width: 100%;
-    height: 256px;
-    padding-bottom: 16px;
-}
-
-.player h3 {
-    font-weight: bold;
-    font-size: 28px;
-    line-height: 40px;
-    margin: 0 0 10px 0;
-}
-
-.player p {
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 26px;
-    color: #6C6C6C;
-    margin: 0;
 }
 
 /* players profile end */
@@ -119,15 +92,25 @@ a {
 /* news start */
 
 .news-section {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    padding-bottom: 80px;
+    width: 80%;
+    padding: 85px 0 50px 0;
+    margin: 0 auto;
+
 }
 
 .news-content {
-    width: 80%;
     display: flex;
+    justify-content: space-between;
+}
+
+.news {
+    width: 30%;
+    box-shadow: 1px 1px 2px 2px grey;
+    padding: 10px;
+}
+
+.news img {
+    width: 100%;
 }
 
 /* news end */
@@ -135,16 +118,24 @@ a {
 /* schedule start */
 
 .schedule-section {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    padding-bottom: 80px;
+    width: 80%;
+    padding: 30px 0 50px 0;
+    margin: 0 auto;
 }
 
 .schedule-content {
-    width: 80%;
     display: flex;
     justify-content: space-between;
+}
+
+.schedule {
+    width: 30%;
+    box-shadow: 1px 1px 2px 2px grey;
+    padding: 10px;
+}
+
+.schedule img {
+    width: 100%;
 }
 
 /* schedule end */
@@ -157,19 +148,15 @@ a {
 }
 
 .footer-content {
+    width: 30%;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
 .footer-top img {
-    width: 483.87px;
-    height: 110px;
+    width: 100%;
     margin-bottom: 20px;
-}
-
-.footer-icons {
-    margin-bottom: 2px;
 }
 
 .footer-icons a {
@@ -183,18 +170,64 @@ a {
     padding: 6px 6px;
 }
 
-.footer-bottom p {
-    font-weight: normal;
-    font-size: 18px;
-    line-height: 24px;
-    text-transform: capitalize;
-    color: black;
-    margin-bottom: 63px;
-}
-
 /* footer end */
 
 /* media query */
+
+/* tab devices */
+
+@media only screen and (min-width: 688px) and (max-width: 992px) {
+
+    .banner-section {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .banner-left {
+        width: 90%;
+        margin-bottom: 50px;
+    }
+
+    .banner-left h1 {
+        font-weight: bold;
+        font-size: 36px;
+        line-height: 50px;
+    }
+
+    .banner-right {
+        width: 90%;
+    }
+
+    .players {
+        width: 90%;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .news-content {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 20px 0;
+    }
+
+    .news {
+        width: 85%;
+    }
+
+    .schedule-content {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 20px 0;
+    }
+
+    .schedule {
+        width: 85%;
+    }
+
+    .footer-content {
+        width: 80%;
+    }
+
+}
 
 /* mobile devices */
 
@@ -202,151 +235,49 @@ a {
     .banner-section {
         flex-direction: column;
         align-items: center;
-        padding: 80px 0 60px;
     }
 
     .banner-left {
+        width: 90%;
         margin-bottom: 50px;
     }
 
     .banner-left h1 {
-        width: 50%;
-        height: 138px;
         font-weight: bold;
         font-size: 36px;
         line-height: 50px;
-        padding: 0 66px 0 16px;
-        margin-bottom: 60px;
-    }
-
-    .banner-left a {
-        margin-left: 19px;
     }
 
     .banner-right {
-        height: 259px;
-    }
-
-    .banner-right img {
-        width: 100%;
-        height: 259px;
-        padding-left: 15px;
+        width: 90%;
     }
 
     .players {
-        width: 70%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .news-section {
-        padding-bottom: 30px;
-    }
-
-    .news-content {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .schedule-section {
-        padding-bottom: 30px;
-    }
-
-    .schedule-content {
-        flex-direction: column;
-        align-items: center;
-    }
-
-
-    .footer-top {
-        display: flex;
-        justify-content: center;
-        width: 60%;
-    }
-
-    .footer-top img {
-        margin-bottom: 50px;
-    }
-
-    .footer-top img {
-        width: 80%;
-    }
-
-    .footer-icons {
-        display: flex;
-        justify-content: center;
-        width: 60%;
-        margin-bottom: 2px;
-    }
-
-    .footer-bottom {
-        display: flex;
-        justify-content: center;
-        width: 60%;
-    }
-
-    .footer-bottom p {
-        margin-bottom: 187px;
-    }
-
-}
-
-/* tab devices */
-
-@media only screen and (min-width: 688px) and (max-width: 992px) {
-
-    .banner-secion {
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        padding: 109px 0 86px;
-    }
-
-    .banner-left {
-        width: 40%;
-        margin-right: 102px;
-        padding: 10px;
-    }
-
-    .banner-left h1 {
-        width: 70%;
-        height: 230px;
-        font-weight: bold;
-        font-size: 64px;
-        line-height: 65px;
-        margin-bottom: 60px;
-    }
-
-    .banner-right {
-        width: 40%;
-    }
-
-    .banner-right img {
-        width: 80%;
-    }
-
-    .players {
-        grid-template-columns: repeat(2, 1fr);
-        grid-gap: 30px 27px;
-    }
-
-    .news-section {
-        padding-bottom: 50px;
+        width: 90%;
+        grid-template-columns: repeat(1, 1fr);
     }
 
     .news-content {
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap: 20px 0;
     }
 
-    .schedule-section {
-        padding-bottom: 50px;
+    .news {
+        width: 85%;
     }
 
     .schedule-content {
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap: 20px 0;
     }
 
+    .schedule {
+        width: 90%;
+    }
+
+    .footer-content {
+        width: 80%;
+    }
 }
